--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -6,11 +6,11 @@
 #    By: damendez <damendez@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/09 17:38:26 by damendez          #+#    #+#              #
-#    Updated: 2024/10/07 15:44:16 by damendez         ###   ########.fr        #
+#    Updated: 2024/10/08 12:31:14 by damendez         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME		= Bureaucrat
+NAME		= Form
 
 SRC_FILES	= Bureaucrat.cpp Form.cpp main.cpp 
 
