implemented ex02 requirements, pending testing

--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME		= Form
+NAME		= Forms
 
 SRC_FILES	= Bureaucrat.cpp Form.cpp main.cpp 
 
